@@ -3,6 +3,7 @@ Unreleased
 Added
     Allow setting container settings when creating them (#57)
     Copy profiles between hosts (#94)
+    Choose host to restore container snapshot to (#96)
 
 Changed
     Redirect by default to https (#86)
